# restless_drive_monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  dbg.sh
src/: api.rs  data.rs  installer.rs  main.rs  truenas.rs
src/assets/: restless-drive-monitor.service
src/smart/: drive_list.rs  mod.rs  smart_read.rs
