[package]
name = "restless_drive_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
log = "^0.4"
env_logger="0.10"
reqwest = { version ="^0.11", features = ["json"] }
url = { version = "2.3", features = ["serde"] }
uuid = { version = "^1.3", features = ["v4", "serde"]}
nix = "^0.26"